<resources>
    <string name="app_name">Know It All</string>
    <string name="emailBar">Enter your email address…</string>
    <string name="loginButton">Login</string>
    <string name="playButton">Play</string>
    <string name="logoutButton">Logout</string>
    <string name="about_text">Last name : OUAMAR\nFirst name : Yahya\nRegistration number : 54915</string>
    <string name="tomorrow_text">Come back tomorrow !</string>
    <string name="logout_text">Are you sure you want to logout ?</string>
    <string name="about">About</string>
    <string name="play">Play</string>
    <string name="rules_text">Knowledge Quiz: Know It All is a quiz app designed to test and expand your general knowledge. Each day, you will receive a new trivia question or factoid to answer.\n\nAnswering Questions: Read the question carefully and select the correct answer from the multiple-choice options provided. Choose wisely, as you will earn points for each correct answer.
        \n\nTime Limit: You will have a limited amount of time to answer each question. Make sure to think quickly and efficiently to maximize your score.
        \n\nXP Points: For each correct answer, you will earn XP (Experience Points). The more correct answers you accumulate, the higher you will climb on the global leaderboard.
        \n\nLeaderboard: Compete with other users from around the world to see who can earn the highest score. Keep an eye on the leaderboard to track your progress and strive to reach the top.
        \n\nLearning Experience: Know It All aims to make learning fun and addictive. You will be amazed at how much you can learn while having an enjoyable time and competing with others.
        \n\nRemember, the more you play and engage with the app, the more knowledge you will acquire. Good luck and have fun exploring the world of trivia and facts with Know It All!</string>
    <string name="rules">Rules</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="museums">Search nearest museums</string>
    <string name="area">Enter your address…</string>
    <string name="logout">Logout</string>
    <string name="invalid_email">Invalid !</string>
    <string name="note_text">NOTE : YOU CAN CHECK YOUR SCORE IN THE LEADERBOARD</string>
    <string name="valid_email">Valid !</string>
    <string name="know_text">Know It All</string>
    <string name="start_button">Start</string>
    <string name="submit">Submit</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="galaxy_text">In a galaxy far, far away, a disturbance in the Force has disrupted the flow of events!</string>
    <string name="ok_text">OK</string>
    <string name="error_text">AN ERROR HAS OCCURRED</string>
    <string name="random_string">AIzaSyBCYXuxp4geiJMfjKVlrrnm_VTEZH64mfY</string>
    <string name="random_string2">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</string>
    <string name="random_string3">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</string>

</resources>