<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/playFragment"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/play" />
    <item
        android:id="@+id/aboutFragment"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/about" />
    <item
        android:id="@+id/rulesFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/rules" />
    <item
        android:id="@+id/leaderboardFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/leaderboard" />
    <item
        android:id="@+id/museumsFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/museums" />
    <item
        android:id="@+id/logoutFragment"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/logout" />
</menu>